[project]
name = "promptools"
version = "0.1.3.1"
description = "useful utilities for prompt engineering"
authors = [{ name = "Muspi Merol", email = "me@promplate.dev" }]
dependencies = ["partial-json-parser>=0.1.2.1"]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }
classifiers = [
    "Typing :: Typed",
    "Framework :: Pydantic :: 2",
    "Topic :: Utilities",
    "Topic :: File Formats :: JSON",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
validation = ["pydantic>=2"]
tokenizer = ["tiktoken>=0.3"]
stream = ["promplate>=0.3", "attrs>=23"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = ["isort", "black", "ipython", "pytest", "pytest-asyncio"]

[tool.pdm.scripts]
test = "pytest"
fmt = { composite = ["isort .", "black ."] }
i = "ipython"

[tool.black]
line-length = 140

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
